# sg

./: CMakeLists.txt  README.md
include/: sg_allocator.h  sg_assert.h  sg_buffer.h  sg_hash_table.h  sg_slice.h  sg_types.h  sg_vector.h
src/: sg_allocator.c  sg_buffer.c  sg_hash_table.c  sg_slice.c  sg_vector.c
unit_tests/: CMakeLists.txt  main.cpp
